fix padding on mobile

--- a/src/_assets/stylesheets/styles.css
+++ b/src/_assets/stylesheets/styles.css
@@ -312,7 +312,8 @@ details[open] > summary {
 
 @media (max-width: 768px) {
 	#latestPostsList {
-		margin: 0 1.5rem 0 1.5rem;
+		margin: 0;
+		width: 100%;
 	}
 }
 
